[package]
name = "blobsman_graphics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
gpui = {version = "0.2.2", features = ["inspector"]}
unicode-segmentation = "1.12.0"
# gpui-component = "0.4.2"
# eframe = "0.33.2"
iroh = { version = "0.95.1", features = ["discovery-pkarr-dht", "discovery-local-network"] }
iroh-blobs = "0.97.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
