[package]
name = "blobsman_graphics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
gpui = { version = "0.2.2", features = ["inspector"], git = "https://github.com/zed-industries/zed"}
gpui_tokio = { version = "0.1.0", git = "https://github.com/zed-industries/zed"}
unicode-segmentation = "1.12.0"
# gpui-component = "0.4.2"
# eframe = "0.33.2"
iroh = { version = "0.96.1", features = ["address-lookup-pkarr-dht", "address-lookup-mdns"] }
iroh-blobs = "0.98.0"
rand = "0.10.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.32"

[target.'cfg(target_os = "linux")'.dependencies]
gpui_platform = { version = "0.1.0", features = ["wayland"], git = "https://github.com/zed-industries/zed"}

[target.'cfg(target_os = "windows")'.dependencies]
gpui_platform = { version = "0.1.0", features = [], git = "https://github.com/zed-industries/zed"}
